# eCommerceWeb-Cpp

./: README.md
cppserver/: .gitignore  CMakeLists.txt  banner.txt  config.json  config.yaml  dev.sh  dev_debug.sh  main.cc
cppserver/app_configs/: ApplicationContext.cpp  ApplicationContext.h
cppserver/controllers/: BaseController.cpp  BaseController.h  ProductController.cc  ProductController.h
cppserver/dto/: DTOAdapter.cpp  DTOAdapter.h  ErrorDTO.h  ProductDTO.cpp  ProductDTO.h
cppserver/exceptions/: BaseException.h  JsonFormatException.h  ProductException.h  ValidationException.h
cppserver/models/: Category.cc  Category.h  Comment.cc  Comment.h  OrderDetail.cc  OrderDetail.h  ProdTag.cc  ProdTag.h  Product.cc  Product.h  SaleOrder.cc  SaleOrder.h  Tag.cc  Tag.h  User.cc  User.h  model.json
cppserver/models/custom/: ProductWithCategory.h
cppserver/paginators/: ProductPaginator.h
cppserver/repositories/: ProductRepository.cc  ProductRepository.h
cppserver/services/: CloudinaryService.cpp  CloudinaryService.h  ProductService.cc  ProductService.h
cppserver/test/: CMakeLists.txt  test_main.cc
cppserver/utils/: CloudinaryClient.cpp  CloudinaryClient.h  FileMultiParser.h  database.cc  database.h  helper.cpp  helper.h  image_extensions.h
cppserver/validations/: validations.cc  validations.h
reactweb/: .env  .gitignore  package-lock.json  package.json
reactweb/src/: App.js
reactweb/src/components/: Footer.js  Header.js  MySpinner.js
reactweb/src/configs/: APIs.js
reactweb/src/screens/Home/: Home.js
